--- a/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/PullingTest/Index.cshtml
@@ -119,6 +119,10 @@
             <h3>
                 <span>Pulling test for Snap/Button/Rivet</span>
             </h3>
+            <div class="breadcrumb">
+                <div>Home</div>
+                <div class="current">Pulling test for Snap/Button/Rivet</div>
+            </div>
             <div class="breadcrumb queryHeader" style="justify-content: flex-end;">
                 <h4 style="margin-right: 1em;color:white">Report No</h4>
                 @Html.DropDownList("ReportNo", (List<SelectListItem>)ViewBag.ReportNo_Source, null, new { @class = "form-control" })
