--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -431,7 +431,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select id="Crocking_Detail_@{@i}__ResultDry" name="Model.Crocking_Detail[@i].ResultDry" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry" name="Model.Crocking_Detail[@i].ResultDry" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultDry) ? "selected" : "";
@@ -459,7 +459,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select id="Crocking_Detail_@{@i}__ResultDry_Weft" name="Model.Crocking_Detail[@i].ResultDry_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultDry_Weft" name="Model.Crocking_Detail[@i].ResultDry_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultDry_Weft) ? "selected" : "";
@@ -487,7 +487,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select id="Crocking_Detail__@{@i}__ResultWet" name="Model.Crocking_Detail[@i].ResultWet" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail__@{@i}__ResultWet" name="Model.Crocking_Detail[@i].ResultWet" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultWet) ? "selected" : "";
@@ -515,7 +515,7 @@
                                                     styleColor = "red";
                                                 }
                                             }
-                                            <select id="Crocking_Detail_@{@i}__ResultWet_Weft" name="Model.Crocking_Detail[@i].ResultWet_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
+                                            <select class="resultList result@{@i}" id="Crocking_Detail_@{@i}__ResultWet_Weft" name="Model.Crocking_Detail[@i].ResultWet_Weft" disabled="disabled" style="width:157px;color:@styleColor" onchange="changeResultColor(this)">
                                                 @foreach (var item in (List<SelectListItem>)ViewBag.ResultList)
                                                 {
                                                     string selected = item.Text.Equals(Model.Crocking_Detail[i].ResultWet_Weft) ? "selected" : "";
@@ -778,6 +778,17 @@
             var idx = $(obj).closest("tr").attr("idx");
             var result=true;
             $(".result" + idx).each(function () {
+                var id = $(this).attr('id');
+                @{
+                    int testOption = Model.CrockingTestOption;
+                    @:if(id.includes('ResultDry_Weft')) {
+                        @:return;
+                    @:}
+                    @:else if (id.includes('ResultWet_Weft')) {
+                       @:return;
+                    @:}
+                }
+
                 if ($(this).val() != "Pass") {
                     result = false;
                 }
