--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/HeatTest.cshtml
@@ -327,8 +327,8 @@
                         </div>
                     </div>
 
-                    <div class="inner-scroll" style="margin-top: 1em; height: 20vh">
-                        <table cellspacing="100" id="heat_Detail" class="DataTable DetailTable table table-striped display;" style="width: 250vw">
+                    <div style="margin-top: 1em; overflow:auto">
+                        <table cellspacing="100" id="heat_Detail" class="DataTable DetailTable table table-striped display;">
                             <thead>
                                 <tr class="row-name" id="row-name">
                                     <th style="width:5vw">Roll#</th>
