--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/CrockingTest.cshtml
@@ -343,7 +343,7 @@
                         </div>
                     </div>
 
-                    <div class="inner-scroll" style="margin-top: 1em; height: 20vh">
+                    <div style="margin-top: 1em; overflow:auto">
                         <table cellspacing="100" id="crocking_Detail" class="DataTable DetailTable table table-striped display;" style="width: 250vw">
                             <thead>
                                 <tr class="row-name" id="row-name">
