--- a/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/FabricCrkShrkTest/Index.cshtml
@@ -266,7 +266,7 @@
                     </div>
                 </div>
 
-                <div class="inner-scroll" style="margin-top: 1em; height: 35vh">
+                <div style="margin-top: 1em;overflow:auto">
                     <table cellspacing="100" class="DataTable DetailTable table table-striped display;" style="width: 250vw">
                         <thead>
                             <tr class="row-name" id="row-name">
