--- a/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/GarmentTest/Detail.cshtml
@@ -384,7 +384,7 @@
                                 <table style="width:92vw; padding:1em;">
                                     <tr>
                                         <td align="right">
-                                            <input id="btnGenerateFGWT" type="button" class="site-btn btn-gy" style="margin:0;border:0;" name="GenerateFGWT" value="Generate FGWT" />
+                                            <input id="btnGenerateFGWT" type="button" class="site-btn btn-gy" style="margin:0;border:0;padding:1.2em;" name="GenerateFGWT" value="Generate FGWT" />
                                         </td>
                                     </tr>
                                 </table>
