--- a/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
+++ b/Quality/Quality/Areas/BulkFGT/Views/AccessoryOvenWash/WashTest.cshtml
@@ -280,12 +280,12 @@
                     $("#Edit").addClass("IsEditMode");
                 }
 
-                if (@Model.OvenEncode == false) {
+                if (@Model.WashEncode == false) {
                     $('#Amend').unbind('click');
                     $("#Encode").addClass("IsEditMode");
                 }
 
-                if (@Model.OvenEncode == true) {
+                if (@Model.WashEncode == true) {
                     $('#Encode').unbind('click');
                     $("#Amend").addClass("IsEditMode");
                 }
